Make sure macro int_errorcode is last declaration Original patch by Tom Donovan PR 43827

git-svn-id: https://svn.apache.org/repos/asf/apr/apr-util/trunk@594036 13f79535-47bb-0310-9956-ffa450edef68